# thesis

./: .gitignore  .gitignore.txt  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoostGraphExample.sln  C#_thesis_project.csproj  C#_thesis_project.sln  CMakeCache.txt  CMakeLists.txt  CSVWriter.h  CT01Loader.cpp  Code_flow_summary.md  ConfigReader.cpp  Environment.h  FastExactMatching.cpp  GurobiBinPacking.cpp  GurobiBinPacking.h  Job.h  Machine.h  Makefile.Libraries  Makefile.VSSimKernel  MathFunctions.h  Matrix.h  MatrixPQ.h  Pattern.cpp  Program.cs  README.md  Sample_1.cpp  ThesisProject.sln  VSSimKernel  VSSimKernel.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config  main.cpp  main.vcxproj.filters  matching_algorithm.cpp  model.mps  output.txt  (+2 more)
2-dimensional/: CL_01_100_01.txt  CL_01_100_03.txt  CL_01_100_03.vbp  CL_01_100_09.vbp  CL_01_100_10.vbp  CL_01_200_03.txt  CL_01_200_04.vbp  CL_01_200_06.vbp  CL_01_200_10.vbp  CL_01_25_02.txt  CL_01_25_05.vbp  CL_01_25_08.vbp  CL_01_25_09.txt  CL_01_25_09.vbp  CL_01_50_01.txt  CL_01_50_01.vbp  CL_01_50_03.vbp  CL_01_50_06.vbp  CL_01_50_07.txt  CL_01_50_07.vbp  CL_01_50_08.vbp  CL_01_50_10.txt  CL_02_100_02.txt  CL_02_100_02.vbp  CL_02_100_09.txt  CL_02_100_09.vbp  CL_02_100_10.vbp  CL_02_200_04.txt  CL_02_200_04.vbp  CL_02_200_05.txt  CL_02_200_06.vbp  CL_02_200_07.vbp  CL_02_200_08.vbp  CL_02_200_09.txt  CL_02_200_10.vbp  CL_02_25_03.vbp  CL_02_25_06.txt  CL_02_25_08.txt  CL_02_50_07.vbp  CL_02_50_08.txt  (+182 more)
Pattern/: Makefile  README.md  checkReducedCost.sh  deduplicate_csv.sh  pattern.cpp  (+1 more)
(+628 files in other folders)
